# claw-os

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml  vendor-jina-reader.yml
agent/: bridge.py  tools.json
apps/calendar/: app.json  main.py  test_main.py
apps/db/: app.json  main.py  test_main.py
apps/doc/: app.json  main.py
apps/email/: app.json  main.py  test_main.py
apps/exec/: app.json  main.py  test_main.py
apps/fs/: app.json  main.py  test_main.py
apps/kv/: app.json  main.py
apps/log/: app.json  main.py
apps/net/: app.json  main.py  test_main.py
apps/notify/: app.json  main.py
apps/pkg/: app.json  main.py
apps/search/: app.json  main.py  test_main.py
apps/sys/: app.json  main.py
apps/web/: app.json  main.py
cli/: aos-ctl  cos-ctl
clients/bridge/: bridge.py
core/: Cargo.toml
core/src/: apps.rs  audit.rs  bridge.rs  browser.rs  checkpoint.rs  config.rs  credential.rs  cron.rs  errors.rs  filelock.rs  ipc.rs  main.rs  netfilter.rs  policy.rs  proc.rs  router.rs  sandbox.rs  server.rs  service.rs  sysinfo.rs  trace.rs  watch.rs
docker/: Dockerfile  Dockerfile.deerflow  Dockerfile.ironclaw  Dockerfile.openclaw
docs/: 01-agent-first-design.md  02-cos-commands.md  03-builtin-apps.md  04-architecture.md
plugins/openclaw/: README.md  openclaw.plugin.json  package.json  tsconfig.json
rootfs/: build.sh  packages.txt
runtime/: server.py  session.py
skills/claw-os/: SKILL.md  apps.md  checkpoint.md  credential.md  cron.md  errors.md  ipc.md  network.md  process.md  (+5 more)
tests/: test_aos.py  test_cos.py
(+13 files in other folders)
