[package]
name = "cos"
version = "0.1.0"
edition = "2021"
description = "Claw OS — agent-native operating system core"

[[bin]]
name = "cos"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
